# SlowcialSharing

./: .gitignore  CLAUDE.md  Program.cs  SlowcialSharing.csproj  appsettings.Development.json  crontab.example  schema.sql  task.md
.mise/tasks/: test  test-integration  test-python  test-rust
Data/: ApplicationDbContext.cs  Models.cs
Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  20230312053635_InitialModels.Designer.cs  20230312053635_InitialModels.cs  20230313191211_GenericItemsInterface.cs  20230313191539_DedicatedRssUrlForSites.Designer.cs  20230313191539_DedicatedRssUrlForSites.cs  ApplicationDbContextModelSnapshot.cs
Pages/: About.cshtml  Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml.cs  Summary.cshtml  Summary.cshtml.cs  _ViewImports.cshtml
Pages/Shared/: _Item.cshtml  (+1 more)
Tests/: SummaryNavigationTests.cs
asp-net-core-app/: Dockerfile  Program.cs  SlowcialSharing.csproj  appsettings.json
dotnet-version/: Directory.Build.Props  SlowcialSharing.csproj
fetcher/: fetcher.py  pyproject.toml
fetcher/.hypothesis/constants/: 0ab540e523878526  9befe01b39aaa61b
fetcher/tests/: test_fetcher.py
integration-tests/: about.hurl  index.hurl  static.hurl  summary.hurl
scripts/: build.sh  deploy.sh  run-tests.sh
slowcialsharing/: .gitignore  README.md  mix.exs  todo.txt
src/: Scraper.cs  Summary.cs  UpdateSchedule.cs
web/: Cargo.toml
web/src/: db.rs  lib.rs  main.rs
web/static/css/: site.css
web/static/js/: formatDates.js
web/templates/: about.html  base.html  index.html  summary.html
web/tests/: integration.rs
(+67 files in other folders)
