[project]
name = "slowcial-fetcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
fetch = "fetcher:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "respx>=0.22",
]
