[package]
name = "slowcial-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
askama = "0.15"
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
url = "2"

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
